--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -13,16 +13,38 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link">
-                            <img src="https://img.icons8.com/ios-glyphs/30/null/filled-appointment-reminders.png" />
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" (click)="helpBtn()">
-                            <img src="https://img.icons8.com/ios-glyphs/30/null/filled-message.png" />
-                        </a>
-                    </li>
+                    <i class="pi pi-bell text-3xl" *ngIf="notificationCount" (click)="markAsRead()"
+                        [matMenuTriggerFor]="notifi" pBadge value="{{notificationCount}}" pTooltip="Notifications"
+                        tooltipPosition="bottom" severity="success"></i>
+                    <i class="pi pi-bell text-3xl" *ngIf="!notificationCount" [matMenuTriggerFor]="notifi"
+                        (click)="markAsRead()" pTooltip="Notifications" tooltipPosition="bottom"></i>
+                    <mat-menu #notifi="matMenu" class="user-menu">
+                        <div class="header" style="margin-left:5%;padding-top: 2px;">
+                            <span>Notifications</span>
+                        </div>
+                        <div *ngIf="notificationList === undefined"
+                            style="margin-left: 5%;max-height: 350px; max-width: 300px;overflow-y: auto;">
+                            No Notification Received
+                        </div>
+                        <div style="margin-left: 5%;max-height: 350px; max-width: 300px;overflow-y: auto;">
+                            <div class="row pt-2" *ngFor="let notification of notificationList; let i = index"
+                                style="width: 100%;">
+                                <div class="col-md-1 pt-2">
+                                    <mat-icon class="bell">notifications_active</mat-icon>
+                                </div>
+                                <div class="col-md-8"
+                                    style="margin-left: 5%; font-size: small; font-weight: 500; cursor: pointer;">
+                                    {{ notification.message }}
+                                </div>
+                                <div class="col-md-1 pt-2" style="font-size: 0.7rem;">
+                                    {{ notification.timeAgo }}
+                                </div>
+                                <p-divider></p-divider>
+                            </div>
+
+                        </div>
+                    </mat-menu>
+                    <i class="pi pi-envelope text-3xl" (click)="helpBtn()" pTooltip="Help" tooltipPosition="bottom"></i>
                     <!-- <p-avatar  image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"></p-avatar> -->
 
                     <!-- <p-menubar [model]="items"></p-menubar> -->
@@ -30,11 +52,11 @@
                     <mat-menu #menu="matMenu" class="user-menu">
                         <button mat-menu-item (click)="viewProfile()">
                             <mat-icon>account_circle</mat-icon>
-                           <span>Profile</span> 
+                            <span>Profile</span>
                         </button>
                         <button mat-menu-item (click)="changePassword()">
                             <mat-icon>lock_reset</mat-icon>
-                            <span> Change Password</span>
+                            <span>Change Password</span>
                         </button>
                         <button mat-menu-item (click)="logOut()">
                             <mat-icon>logout</mat-icon>
